import org.gradle.jvm.toolchain.JavaLanguageVersion

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'idea'
    id "com.diffplug.spotless" version "6.25.0"
}

group = 'com.coding.challenges.adventofcode'
version = '0.0.1-SNAPSHOT'

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

allprojects {
    repositories {
        // Use the Gradle Plugin Portal for resolving plugins.
        gradlePluginPortal()
        mavenCentral()
    }
}

subprojects {
    apply {
        plugin 'java'
        plugin 'idea'
        plugin 'com.diffplug.spotless'
    }

    dependencies {
        implementation 'org.apache.commons:commons-math3:3.6.1'

        compileOnly 'org.projectlombok:lombok:1.18.30'
        annotationProcessor 'org.projectlombok:lombok:1.18.30'

        // Use JUnit Jupiter for testing.
        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'

        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        // This dependency is used by the application.
        implementation 'com.google.guava:guava:32.1.1-jre'
    }

    spotless {
        java {
            clearSteps()
            googleJavaFormat()
            removeUnusedImports()
            endWithNewline()
            trimTrailingWhitespace()
        }
    }
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
